--- a/Tarefa1/nbproject/project.properties
+++ b/Tarefa1/nbproject/project.properties
@@ -27,17 +27,29 @@ dist.dir=dist
 dist.jar=${dist.dir}/Tarefa1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.6-javadoc.jar=/home/gprt/Downloads/commons-lang3-3.6/commons-lang3-3.6-javadoc.jar
+file.reference.commons-lang3-3.6-sources.jar=/home/gprt/Downloads/commons-lang3-3.6/commons-lang3-3.6-sources.jar
+file.reference.commons-lang3-3.6-test-sources.jar=/home/gprt/Downloads/commons-lang3-3.6/commons-lang3-3.6-test-sources.jar
+file.reference.commons-lang3-3.6-tests.jar=/home/gprt/Downloads/commons-lang3-3.6/commons-lang3-3.6-tests.jar
+file.reference.commons-lang3-3.6.jar=/home/gprt/Downloads/commons-lang3-3.6/commons-lang3-3.6.jar
 file.reference.lucene-analyzers-common-6.6.0.jar=lucene-6.6.0/analysis/common/lucene-analyzers-common-6.6.0.jar
 file.reference.lucene-core-6.6.0.jar=lucene-6.6.0/core/lucene-core-6.6.0.jar
 file.reference.lucene-demo-6.6.0.jar=lucene-6.6.0/demo/lucene-demo-6.6.0.jar
 file.reference.lucene-queryparser-6.6.0.jar=lucene-6.6.0/queryparser/lucene-queryparser-6.6.0.jar
+file.reference.opencsv-4.0.jar=/home/gprt/Downloads/opencsv-4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.lucene-demo-6.6.0.jar}:\
     ${file.reference.lucene-queryparser-6.6.0.jar}:\
     ${file.reference.lucene-analyzers-common-6.6.0.jar}:\
-    ${file.reference.lucene-core-6.6.0.jar}
+    ${file.reference.lucene-core-6.6.0.jar}:\
+    ${file.reference.opencsv-4.0.jar}:\
+    ${file.reference.commons-lang3-3.6-javadoc.jar}:\
+    ${file.reference.commons-lang3-3.6-sources.jar}:\
+    ${file.reference.commons-lang3-3.6-test-sources.jar}:\
+    ${file.reference.commons-lang3-3.6-tests.jar}:\
+    ${file.reference.commons-lang3-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,7 +60,12 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.commons-lang3-3.6-javadoc.jar}:\
+    ${file.reference.commons-lang3-3.6-sources.jar}:\
+    ${file.reference.commons-lang3-3.6-test-sources.jar}:\
+    ${file.reference.commons-lang3-3.6-tests.jar}:\
+    ${file.reference.commons-lang3-3.6.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
