--- a/Tarefa1/nbproject/project.properties
+++ b/Tarefa1/nbproject/project.properties
@@ -36,7 +36,7 @@ file.reference.lucene-analyzers-common-6.6.0.jar=lucene-6.6.0/analysis/common/lu
 file.reference.lucene-core-6.6.0.jar=lucene-6.6.0/core/lucene-core-6.6.0.jar
 file.reference.lucene-demo-6.6.0.jar=lucene-6.6.0/demo/lucene-demo-6.6.0.jar
 file.reference.lucene-queryparser-6.6.0.jar=lucene-6.6.0/queryparser/lucene-queryparser-6.6.0.jar
-file.reference.opencsv-4.0.jar=/home/gprt/Downloads/opencsv-4.0.jar
+file.reference.opencsv-4.0.jar-1=/home/guto/Downloads/opencsv-4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,12 +44,12 @@ javac.classpath=\
     ${file.reference.lucene-queryparser-6.6.0.jar}:\
     ${file.reference.lucene-analyzers-common-6.6.0.jar}:\
     ${file.reference.lucene-core-6.6.0.jar}:\
-    ${file.reference.opencsv-4.0.jar}:\
     ${file.reference.commons-lang3-3.6-javadoc.jar}:\
     ${file.reference.commons-lang3-3.6-sources.jar}:\
     ${file.reference.commons-lang3-3.6-test-sources.jar}:\
     ${file.reference.commons-lang3-3.6-tests.jar}:\
-    ${file.reference.commons-lang3-3.6.jar}
+    ${file.reference.commons-lang3-3.6.jar}:\
+    ${file.reference.opencsv-4.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
