--- a/Tarefa1/nbproject/project.properties
+++ b/Tarefa1/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Tarefa1
+application.vendor=guto
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Tarefa1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.6-javadoc.jar=/home/gprt/Downloads/commons-lang3-3.6/commons-lang3-3.6-javadoc.jar
 file.reference.commons-lang3-3.6-javadoc.jar-1=Libraries/commons-lang3-3.6-javadoc.jar
@@ -40,13 +42,11 @@ file.reference.commons-lang3-3.6.jar-1=Libraries/commons-lang3-3.6.jar
 file.reference.lucene-analyzers-common-6.6.0.jar=Libraries/lucene-analyzers-common-6.6.0.jar
 file.reference.lucene-core-6.6.0.jar=Libraries/lucene-core-6.6.0.jar
 file.reference.lucene-queryparser-6.6.0.jar=Libraries/lucene-queryparser-6.6.0.jar
-file.reference.opencsv-4.0.jar=dist/lib/opencsv-4.0.jar
 file.reference.opencsv-4.0.jar-1=Libraries/opencsv-4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.opencsv-4.0.jar-1}:\
-    ${file.reference.opencsv-4.0.jar}:\
     ${file.reference.commons-lang3-3.6-javadoc.jar-1}:\
     ${file.reference.commons-lang3-3.6-sources.jar-1}:\
     ${file.reference.commons-lang3-3.6-test-sources.jar-1}:\
@@ -85,7 +85,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tarefa1.Tarefa1
+main.class=gui.InitialFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
