--- a/Tarefa1/nbproject/project.properties
+++ b/Tarefa1/nbproject/project.properties
@@ -55,7 +55,8 @@ javac.classpath=\
     ${file.reference.lucene-analyzers-common-6.6.0.jar}:\
     ${file.reference.lucene-core-6.6.0.jar}:\
     ${file.reference.lucene-queryparser-6.6.0.jar}:\
-    ${file.reference.opencsv-4.0.jar-1}
+    ${file.reference.opencsv-4.0.jar-1}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
